# AvoidBench

./: .gitignore  README.md  license
src/ThirdP/minimum_jerk_trajectories/: CMakeLists.txt  package.xml
src/ThirdP/minimum_jerk_trajectories/include/minimum_jerk_trajectories/: RapidTrajectoryGenerator.h  SingleAxisTrajectory.h
src/ThirdP/minimum_jerk_trajectories/src/: Demo.cpp  RapidTrajectoryGenerator.cpp  SingleAxisTrajectory.cpp
src/ThirdP/pybind11_catkin/: .travis.yml  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
src/ThirdP/pybind11_catkin/cmake/: pybind11_catkin.cmake.in
src/ThirdP/pybind11_catkin/include/pybind11_catkin/: dummy.hpp
src/ThirdP/rpg_common/: CMakeLists.txt  README.md
src/ThirdP/rpg_common/include/rpg_common/: cols_vec.h  cv_to_eigen.h  cv_type.h  cv_utils.h  diff.h  each.h  eigen_to_cv.h  emplace_checked.h  frequency_worker.h  get_checked.h  get_time_ns.h  gnuplot.h  hamming_distance.h  k_lowest_indices.h  merge-inl.h  merge.h  select.h  sim3.h  singleton.h  stream_utility.h  test_main.h  thread_timer.h  time_enforcer.h  triangulate.h  worker_pool.h  yaml_helpers.h
src/ThirdP/rpg_common/src/: cv_type.cc  cv_utils.cpp  gnuplot.cpp  hamming_distance.cpp  sim3.cpp  thread_timer.cpp  time_enforcer.cpp  triangulate.cpp
src/ThirdP/rpg_common/test/: test_cv_utils.cpp  test_save_load_eigen.cpp  test_triangulate.cpp
src/ThirdP/rpg_quadrotor_common/quadrotor_common/: CMakeLists.txt  package.xml
src/ThirdP/rpg_quadrotor_common/quadrotor_common/src/: control_command.cpp  geometry_eigen_conversions.cpp  math_common.cpp  quad_state_estimate.cpp  trajectory.cpp  trajectory_point.cpp
src/ThirdP/rpg_single_board_io/: CMakeLists.txt  README.md  package.xml
src/ThirdP/rpg_single_board_io/include/rpg_single_board_io/: adc.h  gpio.h  voltage_reader.h
src/ThirdP/rpg_single_board_io/launch/: gpio_interrupt_example.launch  voltage_reader.launch
src/ThirdP/rpg_single_board_io/src/: adc.cpp  gpio.cpp  gpio_interrupt_example.cpp  voltage_reader.cpp
src/agilicious/agilib/: .clang-tidy  CMakeLists.txt  package.xml
src/agilicious/agilib/benchmarks/math/: matrixmath_benchmark.cpp  quaternion_math_benchmark.cpp  vectormath_benchmark.cpp
src/agilicious/agilib/benchmarks/trajectories/: polynomial_benchmark.cpp
src/agilicious/agilib/cmake/: acados.cmake  acados_download.cmake  benchmark.cmake  benchmark_download.cmake  catkin.cmake  eigen.cmake  eigen_download.cmake
src/agilicious/agilib/params/: ctrl.yaml  ekf_full_imu.yaml  ekf_full_no_imu.yaml  ekf_imu.yaml  feedthrough.yaml  geo.yaml  geo_guard.yaml  indi.yaml  laird_receive.yaml  laird_send.yaml  laird_send_ctrl.yaml  mock_rise.yaml  mock_vio.yaml  mpc.yaml  msp.yaml  pid.yaml  pilot.yaml  pos_guard_arena.yaml  pos_sampler.yaml  sbus.yaml  thrust_map.csv  thrust_map_msp.csv  thrust_map_tobi.csv
src/agilicious/agilib/params/dynamics_models/: model_body_drag.yaml  model_lin_cub_drag.yaml  model_rotor_bem.yaml
src/agilicious/agilib/params/low_level_controllers/: llc_betaflight.yaml  llc_simple.yaml
src/agilicious/agilib/params/quads/: example_quad.yaml  sim_kingfisher.yaml
src/agilicious/agilib/src/base/: parameter_base.cpp  pipeline.cpp
src/agilicious/agilib/src/bridge/: bridge_base.cpp  debug_bridge.cpp  serial_bridge.cpp  thrust_map.cpp
src/agilicious/agilib/src/controller/: controller_base.cpp
src/agilicious/agilib/src/estimator/: estimator_base.cpp
src/agilicious/agilib/src/guard/: guard_base.cpp  position_guard.cpp  position_guard_params.cpp
src/agilicious/agilib/src/math/: integrator_base.cpp  integrator_euler.cpp  integrator_rk4.cpp  integrator_symplectic_euler.cpp  math.cpp
src/agilicious/agilib/src/pilot/: pilot.cpp  pilot_params.cpp  pipeline_config.cpp
src/agilicious/agilib/src/reference/: hover_reference.cpp  nw_poly_trajectory_reference.cpp  reference_base.cpp  velocity_reference.cpp
src/agilicious/agilib/src/sampler/: sampler_base.cpp
src/agilicious/agilib/src/serial/: serial.cpp
src/agilicious/agilib/src/simulator/: low_level_controller_base.cpp  low_level_controller_betaflight.cpp  low_level_controller_betaflight_params.cpp  low_level_controller_simple.cpp  low_level_controller_simple_params.cpp  model_base.cpp  model_body_drag.cpp  model_body_drag_params.cpp  model_init.cpp  model_lin_cub_drag.cpp  model_lin_cub_drag_params.cpp  model_motor.cpp  model_propeller_bem.cpp  model_propeller_bem_params.cpp  model_rigid_body.cpp  model_thrust_torque_simple.cpp  quadrotor_simulator.cpp  simulator_base.cpp  simulator_params.cpp
src/agilicious/agiros_msgs/: CMakeLists.txt  package.xml
src/agilicious/agiros_msgs/msg/: Acceleration.msg  Command.msg  QuadState.msg  RLtrajectory.msg  Reference.msg  RotorFeedbackStamped.msg  Setpoint.msg  Telemetry.msg
src/avoidbench/avoid_manage/: CMakeLists.txt  package.xml
src/avoidbench/avoid_manage/cmake/: catkin.cmake
src/avoidbench/avoid_manage/include/: avoid_manage.hpp
src/avoidbench/avoid_manage/params/: avoidbench_indoor.yaml  avoidbench_outdoor.yaml  clrrt_planner.yaml  default.yaml  dispspace.yaml  flightmare.yaml  mission.yaml  save_data.yaml  save_data2.yaml  task_indoor.yaml  task_indoor2.yaml  task_outdoor.yaml  task_outdoor2.yaml  test_rl.yaml
src/avoidbench/avoid_manage/scripts/: avoid_manage.py  plot_metrics.py
src/avoidbench/avoid_manage/src/: avoid_manage.cpp  avoid_manage_node.cpp  rl_test.cpp
src/avoidbench/avoid_msgs/: CMakeLists.txt  package.xml
src/avoidbench/avoid_msgs/msg/: Factor.msg  Metrics.msg  PointCloudInfo.msg  TaskState.msg
src/avoidbench/avoidlib/: CMakeLists.txt  package.xml
src/avoidbench/avoidlib/configs/: quadrotor_env.yaml
src/avoidbench/avoidmetrics/: CMakeLists.txt  package.xml
src/avoidbench/avoidmetrics/include/: Metrics.h  Mission.h  astar_path_finding.h  environment.h
src/avoidbench/avoidmetrics/launch/: pcl.launch  pcl.rviz
src/avoidbench/avoidmetrics/point_clouds_data/: .ply
src/avoidbench/avoidmetrics/src/: Metrics.cpp  Mission.cpp  astar_path_finding.cpp  environment.cpp  read_pcl.cpp
src/avoidbench/unity_scene/: CMakeLists.txt  package.xml
(+353 files in other folders)
