<?xml version="1.0"?>
<package format ="2">
  <name>minimum_jerk_trajectories</name>
  <version>0.0.0</version>
  <description>The minimum_jerk_trajectories package</description>

  <maintainer email="falanga@ifi.uzh.ch">Davide Falanga</maintainer>

  <license>GNU GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>quad_common</depend>
	
</package>
