<?xml version="1.0"?>
<package format="3">
  <name>pybind11_catkin</name>
  <version>2.6.1</version>
  <description>The pybind11 package</description>
  <maintainer email="wolfgang@robots.ox.ac.uk">Wolfgang Merkt</maintainer>
  <maintainer email="v.ivan@ed.ac.uk">Vladimir Ivan</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_export_depend>eigen</build_export_depend>

  <build_export_depend condition="$ROS_PYTHON_VERSION == 2">python</build_export_depend>
  <build_export_depend condition="$ROS_PYTHON_VERSION == 2">python-numpy</build_export_depend>
  <build_export_depend condition="$ROS_PYTHON_VERSION == 3">python3</build_export_depend>
  <build_export_depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</build_export_depend>
</package>
