<?xml version="1.0"?>
<package format="2">
  <name>agiros_msgs</name>
  <version>0.0.0</version>
  <description>The agiros_msgs package</description>

  <maintainer email="foehn@ifi.uzh.ch">Philipp Foehn</maintainer>
  <license>MIT</license>

  <author>Philipp Foehn</author>
  <author>Elia Kaufmann</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>

</package>
