<?xml version="1.0"?>
<package format="2">
  <name>avoid_manage</name>
  <version>0.0.1</version>
  <description>ROS-Wrapper for avoidlib</description>

  <maintainer email="h.y.yu@tudelft.nl">Hang Yu</maintainer>

  <license>GNU GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>avoidlib</depend>
  <depend>avoidmetrics</depend>
  <depend>avoid_msgs</depend>
  <depend>roscpp</depend>
  <depend>message_generation</depend>
  <depend>autopilot</depend>
  <depend>quadrotor_common</depend>
  <depend>nav_msgs</depend>
  <depend>eigen_catkin</depend>
  <depend>rpg_quadrotor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>eigen_conversions</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>mav_msgs</depend>
  <depend>catkin_simple</depend>
  <depend>catkin</depend>

</package>
