<?xml version="1.0"?>
<package format="2">
  <name>avoid_msgs</name>
  <version>0.0.0</version>
  <description>The avoid_msgs package</description>

  <maintainer email="h.y.yu@tudelft.nl">Hang Yu</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <export>

  </export>
</package>
