<?xml version="1.0"?>
<package format="2">
  <name>avoidlib</name>
  <version>0.0.1</version>
  <description>AvoidBench: A high-fidelity benchmarking suite for vision-based obstacle avoidance</description>

  <maintainer email="h.y.yu@tudelft.nl">Hang Yu</maintainer>

  <license>GNU GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>quadrotor_common</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>message_generation</depend>
  <depend>pybind11_catkin</depend>

</package>
